@@ -7,6 +7,10 @@
      [key.c key.h]
      add improved fingerprint functions. based on work by Carsten
      Raskgaard <cara@int.tele.dk> and modified by me. ok markus@.
+   - jakob@cvs.openbsd.org 2001/03/11 15:04:16
+     [ssh-keygen.1 ssh-keygen.c]
+     print both md5, sha1 and bubblebabble fingerprints when using
+     ssh-keygen -l -v. ok markus@.
 
 20010311
  - OpenBSD CVS Sync
@@ -4500,4 +4504,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.941 2001/03/11 20:03:44 mouring Exp $
+$Id: ChangeLog,v 1.942 2001/03/11 20:05:19 mouring Exp $
